fixed the window being too big issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,7 +80,7 @@ nav a:hover {
 #contact {
 	margin-top: -120px;
 	height: 2px;
-	width: 100%;
+	width: 250px;
 	background-color: none;
 	position: absolute;
 }
@@ -207,7 +207,7 @@ h5 {
 #face {
 	float: left;
 	display: block;
-	margin: 10px 15px 35px 0px;
+	margin: 12px 15px 35px 0px;
 	max-width: 600px;
 	width: 100%;
 }
